# protoc-gen-validate

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .travis.yml  BUILD  BUILD.bazel  Dockerfile  Gopkg.toml  LICENSE  MODULE.bazel  Makefile  Next.mk  README.md  Tools.mk  WORKSPACE  buf.gen.yaml  buf.work.yaml  buf.yaml  checker.go  dependencies.bzl  docs.md  go.mod  go.sum  go.work  go.work.sum  main.go  module.go  protobuf.patch  requirements.txt  requirements_parser.py  rule_comparison.md  test.go.bak  tools.go
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  settings.xml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: buf.yaml  build.yaml  ci.yaml  commit.yaml  conformance.yaml  emergency-review-bypass.yaml  goreleaser.yaml  maven-build.yaml  maven-deploy.yaml  maven-publish.yaml  maven-release.yaml  maven-verify.yaml  notify-approval-bypass.yaml  pr-hygiene.yaml  python-package-conda.yml  python-package.yaml  release.yml  semver.yaml  version-bump.yaml
bazel/: BUILD  dependency_imports.bzl  extra_dependency_imports.bzl  go_proto_library.bzl  go_repos.bzl  pgv_proto_library.bzl  protobuf.bzl  protobuf.bzl.diff  re2.patch  repositories.bzl
bazel/go/: BUILD
cc/: BUILD.bazel  buf_deps.bzl
cmd/protoc-gen-validate-cpp/: BUILD  main.go
cmd/protoc-gen-validate-go/: BUILD  main.go
cmd/protoc-gen-validate-java/: BUILD  main.go
docs/: README.md  cel.md  conformance.md  constraints.md  custom-constraints.md  errors.md  migrate.md  standard-constraints.md
dotnet/: .gitignore
dotnet/Envoyproxy.Validator/: EmailAddressParser.cs  Envoyproxy.Validator.csproj  IValidateable.cs  Operator.cs  StringValidation.cs  UrlParser.cs  ValidationException.cs  WordDecoder.cs
dotnet/Envoyproxy.Validator.Tests/: EmailAddressParserTest.cs  Envoyproxy.Validator.Tests.csproj  UrlParserTest.cs  WordDecoderTest.cs
dotnet/Envoyproxy.Validator.Tools/: Common.cs  DepFileUtil.cs  Envoyproxy.Validator.Tools.csproj  GeneratorServices.cs  ValidatorGenerate.cs  ValidatorGeneratorOutputs.cs
example-workspace/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  dependencies.bzl  example.cc  example.py  example_test.sh
example-workspace/foo/: BUILD
go/v2/: README.md  go.mod  go.sum  validator.go  validator_bench_test.go  validator_example_test.go  validator_test.go
gogoproto/: BUILD.bazel
harness/: harness.proto
harness/cases/: bool.proto  numbers.proto  strings.proto
harness/executor/: cases.go  harness.go  worker.go
harness/go/: harness.go
internal/: BUILD  internal.go
java/: RELEASING.md  pom.xml  settings.xml  sonatype_nexus_upload.py
java/pgv-artifacts/: pom.xml
java/pgv-java-demo/: pom.xml
java/pgv-java-grpc/: pom.xml
java/pgv-java-stub/: pom.xml
java/pgv-java-validation/: dependency-reduced-pom.xml  pom.xml
java/pgv-test-coverage-report/: pom.xml
java/pvg-java-validation/: pom.xml
module/: BUILD  checker.go  validate.go
proto/testing/buf/validate/conformance/cases/custom_constraints/: BUILD.bazel  custom_constraints.proto
proto/testing/buf/validate/conformance/harness/: BUILD.bazel  harness.proto  results.proto
proto/validate/buf/validate/: BUILD.bazel  expression.proto  validate.proto
proto/validate/buf/validate/priv/: BUILD.bazel  private.proto
protolock-pgv/: .gitignore  BUILD.bazel  README.md  plugin.go
protolock-pgv/proto/: debug.txt  numbers.proto
python/: BUILD  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
python/protoc_gen_validate/: validator.py
templates/: BUILD.bazel  pkg.go
templates/cc/: BUILD.bazel  any.go  bytes.go  const.go  duration.go  enum.go  file.go  in.go  known.go  map.go  message.go  msg.go  none.go  num.go  plugin.go  register.go  repeated.go  string.go  timestamp.go  wrapper.go
templates/ccnop/: BUILD.bazel  file.go  register.go
templates/dotnet/: any.go  bool.go  bytes.go  duration.go  enum.go  file.go  map.go  message.go  msg.go  none.go  num.go  register.go  repeated.go  string.go  timestamp.go  wrapper.go
templates/go/: BUILD.bazel  duration.go  file.go  map.go  message.go  msg.go  plugin.go  register.go  repeated.go  required.go  timestamp.go
templates/gogo/: BUILD.bazel  duration.go  file.go  message.go  register.go  repeated.go  required.go  timestamp.go
templates/goshared/: BUILD.bazel  any.go  bytes.go  const.go  duration.go  enum.go  in.go  known.go  ltgt.go  map.go  msg.go  num.go  register.go  repeated.go  string.go  timestamp.go  wrapper.go
templates/java/: BUILD.bazel  any.go  bool.go  bytes.go  duration.go  enum.go  file.go  fileIndex.go  map.go  message.go  msg.go  none.go  num.go  oneof.go  plugin.go  register.go  repeated.go  required.go  string.go  timestamp.go  unimplemented.go  wrapper.go
templates/php/: BUILD.bazel  any.go  bool.go  bytes.go  duration.go  enum.go  file.go  map.go  message.go  msg.go  none.go  num.go  oneof.go  register.go  repeated.go  required.go  string.go  timestamp.go  unimplemented.go  wrapper.go
templates/php_yaml/: BUILD.bazel  any.go  bool.go  choice.go  duration.go  enum.go  file.go  map.go  message.go  msg.go  none.go  num.go  oneof.go  register.go  repeated.go  required.go  string.go  timestamp.go  unimplemented.go
templates/python/: BUILD.bazel  any.go  bytes.go  const.go  duration.go  enum.go  file.go  in.go  known.go  ltgt.go  map.go  message.go  msg.go  none.go  num.go  register.go  repeated.go  string.go  timestamp.go  wrapper.go
templates/shared/: BUILD.bazel  context.go  disabled.go  enums.go  functions.go  in_list.go  template.go  versions.go  well_known.go
tests/: go.mod  go.sum
tests/harness/go/: BUILD  BUILD.bazel  harness.go
tests/harness/go/main/: BUILD  harness.go
tests/harness/go/proto_names/: BUILD  harness.go
tests/harness/gogo/: BUILD.bazel
tests/harness/gogo/main/: BUILD  BUILD.bazel  harness.go
tools/: go.mod  go.sum
validate/: BUILD  validate.h  validate.pb.go  validate.proto  validator.py
version/: BUILD  version.go
windows/: bazel.rc  ci.ps1
(+381 files in other folders)
