module(
    name = "protoc-gen-validate",
    repo_name = "com_envoyproxy_protoc_gen_validate",
    version = "0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "27.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "re2", version = "2021-09-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_python", version = "0.32.2")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_iancoleman_strcase",
    "com_github_lyft_protoc_gen_star_v2",
    "org_golang_google_protobuf",
    "org_golang_x_net",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pgv_pip_deps",
    python_version = "3.11",
    requirements_lock = "//python:requirements.txt",
)
use_repo(pip, "pgv_pip_deps")

non_module_deps = use_extension("//bazel:repositories.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_google_guava",
    "com_google_re2j",
    "org_apache_commons_validator",
)
