module(
    name = "pgv-example",
)

bazel_dep(
    name = "protobuf",
    version = "3.19.0",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "protoc-gen-validate",
    repo_name = "com_envoyproxy_protoc_gen_validate",
)
bazel_dep(
    name = "re2",
    version = "2021-09-01",
    repo_name = "com_googlesource_code_re2",
)
# -- bazel_dep definitions -- #

local_path_override(
    module_name = "protoc-gen-validate",
    path = "..",
)
