[metadata]
name = protoc-gen-validate
version = 0.4.1
author = Envoyproxy
author_email = dev@lyft.com
description = PGV for python via just-in-time code generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/envoyproxy/protoc-gen-validate
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    ipaddress>=1.0.22
    validate-email>=1.3
    Jinja2>=2.11.1
    protobuf>=3.6.1
python_requires = >=3.6

[options.data_files]
data = validate.proto

[flake8]
max-line-length = 120
ignore =
    F401  # unused imports
