load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "templates",
    srcs = ["pkg.go"],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/cc",
        "//templates/go",
        "//templates/java",
        "//templates/shared",
        "@com_github_lyft_protoc_gen_star//:protoc-gen-star",
        "@com_github_lyft_protoc_gen_star//lang/go",
    ],
)

alias(
    name = "go_default_library",
    actual = ":templates",
    visibility = ["//visibility:public"],
)
