load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go",
    srcs = [
        "duration.go",
        "file.go",
        "message.go",
        "plugin.go",
        "register.go",
        "required.go",
        "timestamp.go",
    ],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates/go",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/shared",
        "//templates/goshared",
        "@com_github_lyft_protoc_gen_star//:protoc-gen-star",
        "@com_github_lyft_protoc_gen_star//lang/go",
    ],
)

alias(
    name = "go_default_library",
    actual = ":go",
    deprecation = "Use :go instead of :go_default_library.  Details about the new naming convention: https://github.com/bazelbuild/bazel-gazelle/pull/863",
    visibility = ["//visibility:public"],
)
