load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "shared",
    srcs = [
        "context.go",
        "disabled.go",
        "functions.go",
        "reflection.go",
        "template.go",
        "well_known.go",
    ],
    importpath = "github.com/envoyproxy/protoc-gen-validate/templates/shared",
    visibility = ["//visibility:public"],
    deps = [
        "//validate",
        "@com_github_lyft_protoc_gen_star//:protoc-gen-star",
        "@com_github_lyft_protoc_gen_star//lang/go",
        "@org_golang_google_protobuf//proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":shared",
    deprecation = "Use :shared instead of :go_default_library.  Details about the new naming convention: https://github.com/bazelbuild/bazel-gazelle/pull/863",
    visibility = ["//visibility:public"],
)
